# pkg/server/db/model.go
@@ -51,6 +51,7 @@ const (
 	TaskResultStatusError   = "error"
 	TaskResultStatusMerged  = "merged"
 	TaskResultStatusOpen    = "open"
+	TaskResultStatusPushed  = "pushed"
 	TaskResultStatusUnknown = "unknown"
 )
 
